# embodied-cube-grasping

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  教程.md
configs/: cube_grasp_smolvla.env
examples/: 01_show_scene.py  02_play_scripted_grasp.py  03_get_camera_image.py  04_live_camera_view.py  05_camera_stream_server.py  06_keyboard_control_arm.py  07_keyboard_control_ee.py  08_replay_recorded_actions.py  09_run_trained_policy.py  README.md
scripts/: debug_policy_episode.py  download_smolvla_models.sh  inspect_training_run.py  install_torch_cu118_cn.sh  prepare_smolvla_panda_policy.py  setup_lerobot_smolvla.sh  train_smolvla_10_success.sh  train_smolvla_cube.sh  train_smolvla_with_logs.sh
src/lerobot_smolvla_mujoco_demo/: __init__.py  demo.py  env.py  eval_policy.py  record_dataset.py  scripted_grasp.py  viewer.py
src/lerobot_smolvla_mujoco_demo/assets/mujoco/: cube_grasp_scene.xml
